--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="investors.html">Investors &amp; Board of Directors</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="apply.html">Apply</a></li>
+		<li><a href="test.html">Test</a></li>
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
